completed page template

--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
     </div>
 
     <!--Main footer-->
-
+    <footer>
+      <nav class="navbar fixed-bottom bg-light">
+        <div class="container-flluid">
+          <h5>ALL Rights Reserved. COMP2112. &copy; Copyright 2022.</h5>
+        </div>
+      </nav>
+    </footer>
     <!-- JavaScript SECTION -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
