--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COMP2112</title>
+    <title>Our Projects</title>
     <!-- CSS SECTION -->
     <link
       rel="stylesheet"
@@ -36,7 +36,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="index.html"
                   ><i class="fa-solid fa-house-chimney fa-lg"></i> Home</a
                 >
               </li>
@@ -46,7 +46,10 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="projects.html"
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="projects.html"
                   ><i class="fa-solid fa-diagram-project fa-lg"></i> Our
                   Project</a
                 >
@@ -68,7 +71,7 @@
     </header>
     <!--Main content-->
     <div class="container">
-      <h1>Welcome to our site!</h1>
+      <h1>Our Projects</h1>
       <hr />
     </div>
 
