--- a/about.html
+++ b/about.html
@@ -18,54 +18,7 @@
   </head>
   <body>
     <!--Main nav-->
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">COMP2112</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
-                  ><i class="fa-solid fa-house-chimney fa-lg"></i> Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="about.html"
-                  ><i class="fa-solid fa-circle-info fa-lg"></i> About Us
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="projects.html"
-                  ><i class="fa-solid fa-diagram-project fa-lg"></i> Our
-                  Project</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="services.html"
-                  ><i class="fa-solid fa-map fa-lg"></i> Our Services</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="contacts.html"
-                  ><i class="fa-solid fa-address-card fa-lg"></i> Contact Us</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+    <header></header>
     <!--Main content-->
     <div class="container">
       <h1>About Us</h1>
@@ -73,13 +26,7 @@
     </div>
 
     <!--Main footer-->
-    <footer>
-      <nav class="navbar fixed-bottom bg-light">
-        <div class="container-flluid">
-          <h5>ALL Rights Reserved. COMP2112. &copy; Copyright 2022.</h5>
-        </div>
-      </nav>
-    </footer>
+    <footer></footer>
     <!-- JavaScript SECTION -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
