--- a/about.html
+++ b/about.html
@@ -19,14 +19,13 @@
   <body>
     <!--Main nav-->
     <header></header>
+
     <!--Main content-->
-    <div class="container">
-      <h1>About Us</h1>
-      <hr />
-    </div>
+    <main></main>
 
     <!--Main footer-->
     <footer></footer>
+
     <!-- JavaScript SECTION -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
