--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COMP2112</title>
+    <title>Home</title>
     <!-- CSS SECTION -->
     <link
       rel="stylesheet"
-      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+      href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
-    <link rel="stylesheet" href="/Content/app.css" />
+    <link rel="stylesheet" href="./Content/app.css" />
   </head>
   <body>
-    <!--Main nav-->
+    <!-- Main Navigation -->
     <header></header>
-    <!--Main content-->
-    <div class="container">
-      <h1>Welcome to our site!</h1>
-      <hr />
-    </div>
 
-    <!--Main footer-->
+    <!-- Main Content -->
+    <main></main>
+
+    <!-- Main Footer Content -->
     <footer></footer>
-    <!-- JavaScript SECTION -->
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/Scripts/contact.js"></script>
-    <script src="/Scripts/app.js"></script>
+
+    <!-- JavaScript SECTION-->
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./Scripts/contact.js"></script>
+    <script src="./Scripts/app.js"></script>
   </body>
 </html>
