--- a/projects.html
+++ b/projects.html
@@ -20,11 +20,7 @@
     <!--Main nav-->
     <header></header>
     <!--Main content-->
-    <div class="container">
-      <h1>Our Projects</h1>
-      <hr />
-    </div>
-
+    <main></main>
     <!--Main footer-->
     <footer></footer>
     <!-- JavaScript SECTION -->
